# GL_BOOK_VRIES

./: .gitignore  CMakeLists.txt  README.md  test
include/: MatrixLib.h  Quaternion.h  Scene.h  VectorsLib.h  camera.h  editModeUI.h  globalShaderInitalConfig.h  load2DTexture.h  mesh.h  model.h  models.h  shader.h
include/glad/: glad.h
include/mathHeaders/: Mat2.h  Vec2.h  Vec3.h  Vec4.h  quat.h
problems/: twoTriangleDrawArray.cpp
resources/Models/Amazing/: Caine new rig Malik Radwan.gltf  Caine.glb
resources/Models/Container/: container.mtl
resources/Models/Floor/: floor.mtl
resources/Models/Guitar/: guitar.mtl
resources/Models/Heart/: heart.mtl
resources/Models/Man/: man.mtl
resources/Models/MetalCube/: metalCube.mtl
resources/Models/PhysicsCube/: PhysicsCube.mtl
resources/Models/PhysicsFloor/: PhysicsFloor.mtl
resources/Models/Scenario01/: Scenario01.mtl
resources/Models/SimpleFloor/: Scenario.mtl
resources/Models/Utah_teapot/: Utah-teapot.mtl
resources/Models/Utha_Teapot/: Utah-teapot.mtl
resources/Models/caine/: caine.mtl
resources/Models/ferrari-288-gto/source/: ferrari 288 gto.mtl
shaders/: attenuationFragmentShader.frag  attenuationVertexShader.vert  flashFragmentShader.frag  floorFragmentShader.frag  floorVertexShader.vert  fragmentTemp.frag  globalFragmentShader.frag  globalFragmentShader1.frag  globalFragmentShader1.glsl  globalVertexShader.glsl  inPosFragmentShader.frag  interpolationFragment.frag  interpolationVertex.vert  lightFragmentShader.frag  lightSourceFragmentShader.frag  lightSourceVertexShader.vert  lightVertexShader.vert  materialFragmentShader.frag  materialVertexShader.vert  modelFragmentShader.frag  outPosVertexShader.vert  squareFragmentShader.frag  squareVertexShader.vert  testUniformFragmentShader.frag  testUniformVertexShader.vert  upsideDownVertexShader.vert  vertexTemp.vert  wallFragmentShader.frag  wallVertexShader.vert
src/: camera.cpp  editModeUI.cpp  gameTextures.cpp  glad.c  load2DTexture.cpp  main.cpp  mesh.cpp  model.cpp  shader.cpp
src/mathSrc/: Vec2.cpp  Vec3.cpp  Vec4.cpp
temp/: beforeCameraClass.cpp  oldModelsLoading.cpp  trianglesExampleCode.cpp
